# Pytest_microservice_api_tests

./: # Pyton_Project_Setup_Execution.md  README.md  report.html  requirements.txt
.github/workflows/: api-tests.yml
challenge/: README.md  data.md
challenge/backend/: README.md  docker-compose.yaml
challenge/backend/backend_service/: ._Dockerfile  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  shell.nix
challenge/backend/backend_service/src/: configuration.rs  inference.rs  lib.rs  main.rs  startup.rs
challenge/backend/backend_service/src/common/: app_info.rs  error_info.rs  mod.rs
challenge/backend/backend_service/src/routes/: mod.rs  severity_prediction.rs  status.rs
challenge/backend/backend_service/tests/: severity_prediction.rs  status.rs
challenge/backend/backend_service/tests/common/: mod.rs
tests/: severity_predictions_test.py
