[package]
name = "backend_service"
version = "0.1.0"
authors = ["Wefox AI Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend_service"

[dependencies]
actix-web = "=4.0.0-beta.5"

config = "=0.11.0"
serde = { version = "=1", features = ["derive"] }
serde_json = "=1.0"
chrono = { version = "=0.4.19", features = ["serde"] }

tracing = { version = "=0.1", features = ["log"] }
tracing-futures = "=0.2.5"
tracing-subscriber = { version = "=0.2.12", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "=0.2.4"
tracing-log = "=0.1.2"
tracing-actix-web = "=0.4.0-beta.4"
reqwest = { version = "=0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
anyhow = "=1.0.41"
mime = "=0.3.16"

[dependencies.serde_with]
version = "=1.9.1"

[dev-dependencies]
actix-rt = "=2"
once_cell = "=1.20.2"
# reqwest = { version = "=0.11", features = ["json"] }
tokio = { version = "=1", features = ["rt", "macros"] }
assert2ify = "=0.1.0-alpha1"
